--- a/client/app/about/about.html
+++ b/client/app/about/about.html
@@ -1,64 +1,45 @@
-<div style="position:relative; overflow:hidden; margin-bottom:500px;">
-<!-- <div class="container-fluid"> -->
-	<img parallax parallax-ratio="0.4" src="http://lorempixel.com/1400/500" style="width: 100%; position:relative; z-index: -130;">
+<view-title>เกี่ยวเพื่อนใจ -</view-title>
+<div class="container animated fadeIn">
+	<h1><img ng-src="/assets/images/icon.gif" style="margin-bottom:75px;">
+<span style="font-size:5em;">เพื่อนใจทําไมกัน?</span></h1>
+		<h2 style="font-size: 4em;">จุดประสงของการสร้างเพื่อนใจ..</h2><br>
 
-	<h1 style="position: absolute; background: white;">
-		สวัสดีครับผมชื่อนายศุภกร เลาหสงคราม ตอนนี้ ไม่มีรายได้ ไม่มีงานประจํา ไม่มีหน้าตาอะไรในสังคม มีอย่างเดียวคือ จิตใจที่ต้องการจะทําดีต่อผู้อื่นโดยเชื่อว่าถ้าทําดีแล้วจะต้องอยู่รอดได้ ผมไม่ได้เอาความฉลาดในการหาเงินเป็นเดิมพันเพื่อการอยู่รอด ไม่ได้เอาความเก่งกาจ อํานาจ หรือวุตจากเมืองนอกอะไรมาเป็นเดิมพัน แต่จะเอาการทําดีที่ผมเคยทํา กําลังทํา และ จะทําเป็นเดิมพันโดยที่ผมเชื่อว่า
+		<h3 style="font-size: 3em;">..นั้นเพื่อเปิดพื่นที่ให้ทุกคนได้สามารถแลกเปลียนและช่วยปัญหาของกันและกันอย่างเปิดใจ<br><br>
 
-		ถ้าทําดีจริง ยังไงสังคมก็ต้องช่วยและสนันสนุนความดีนั่น
+		เราต้องการให้ทุกคนบนโลกนี้รู้ว่า<ins style="font-size: 1.2em;">คุณไม่ได้เป็นคนเดียวที่อยู่ในโลกนี้</ins> มีคนมากหมายที่ยินดีที่จะช่วยเสมือนกับว่าเราเป็นเพื่อนร่วมโลกกันอย่างไม่หวังผลตอบแทนใดๆด้วยความรักและหวังดี<br><br>
 
-		ผมเชื่อในความดี และอยากให้คนอื่นเช่นกันเชื่อมั่นในความดีของตนและทําในสิ่งนั้นแบบไม่กลัวตาย
+		ในโลกปัจจุบันที่ทุกอย่างดูยุ่งเหยิงลําบากและสิ้นหวัง ยังมีที่กลุ่มคนอย่างเพื่อนใจที่ยังเป็นทีพักพิงเพื่อให้เพื่อนๆทุกคนได้ลุกขึ้นและเดินหน้าต่อไปในชีวิต<br><br>
 
-		ถ้าคนทําดีจริง จะต้องอยู่รอดได้ เพราะมันดีจริง
+		ยินดีต้อนรับทุกท่านเข้ามาเป็นเพื่อนใจเพื่อทําให้สังคมนี้อบอุ่นขึ้น และ เป็นกําลังใจให้ทุกคนทําหน้าที่ของตนอย่างสุดความสามารถเพื่อที่จะทําฝันของทานให้เป็นจริง<br><br>
+		</h3>
+		<hr><br>
 
-		ผมตั่งใจแล้วว่าชีวิตนี้จะใช้ชีวิตอย่างปรตูปชีวี คือ มีการเป็นอยู่ที่เนื่องอยู่ด้วยการให้ของผู้อื่น
+		<h2 style="font-size: 4em;">What is Puan Jai or Soul Friends?</h2><br>
+		<h3 style="font-size: 3em;">This website was solely created with one intent in mind and that is: <ins style="font-size: 1.2em;">to let everyone knows that they are not alone in this world.</ins><br><br>
 
-		ผมไม่รู้ว่าการเดิมพันครั่งนี้จะเป็นอย่างไร เรายังมีความหวังในมนุษยธรรมได้อยู่ไหม ความดีมันกินไม่ได้จริงหรือเปล่า หรือว่าในที่สุดแล้วความดีไม่มีค่าอะไรในสังคมเท่าสิ่งที่จับต้องได้
+		Even though life gets tough, things do not go the way we wanted to, and life seems to be weighting you down. We, Soul Friends, wants to be there to alleviate an do whatever we can to help you get back up and move foward stronger and happier into life without wanting anything in return.<br><br>
 
-		นี้คือการเดินทางเพื่อหาคําตอบโดยการเอาชีวิตเป็นตัวทดลอง
+		Please remember tht there is always someone behind you who supports you even when you are at your worst or your best.<br><br>
 
-		เป็นการก้าวเข้าไปสู่ความมืด ที่มีแต่การเดินต่อไปในความมืดนั้นเท่านั้นที่จะพาเราไปถึงจุดหมาย
+		Puanjai would like to sincerely thank you for coming to support this website in anyway you can. Please make use of it and help others along the way in the hope your small act could change someone's life and make this world a little brighter.<br><br>
+		
 
-	</h1>
 
-	<img parallax parallax-ratio="0.4"src="http://lorempixel.com/1400/500/sports" style="width: 100%; position:relative; z-index: -23;margin-bottom: 300px;" >
 
-	<p class="lead" style="position:absolute; background: white;">
-		สวัสดีครับผมชื่อนายศุภกร เลาหสงคราม ตอนนี้ ไม่มีรายได้ ไม่มีงานประจํา ไม่มีหน้าตาอะไรในสังคม มีอย่างเดียวคือ จิตใจที่ต้องการจะทําดีต่อผู้อื่นโดยเชื่อว่าถ้าทําดีแล้วจะต้องอยู่รอดได้ ผมไม่ได้เอาความฉลาดในการหาเงินเป็นเดิมพันเพื่อการอยู่รอด ไม่ได้เอาความเก่งกาจ อํานาจ หรือวุตจากเมืองนอกอะไรมาเป็นเดิมพัน แต่จะเอาการทําดีที่ผมเคยทํา กําลังทํา และ จะทําเป็นเดิมพันโดยที่ผมเชื่อว่า
 
-		ถ้าทําดีจริง ยังไงสังคมก็ต้องช่วยและสนันสนุนความดีนั่น
+<!-- 	<div class="page-header">
+	  <h1>เพื่อนใจคือ? <small></small></h1>
+	</div>
 
-		ผมเชื่อในความดี และอยากให้คนอื่นเช่นกันเชื่อมั่นในความดีของตนและทําในสิ่งนั้นแบบไม่กลัวตาย
+	<p class="lead">ชุมชนที่รักกันและกันและยินดีที่จะรับฟังปัญหาของผู้อื่น</p>
+	เพื่อนใจทําไมกัน
 
-		ถ้าคนทําดีจริง จะต้องอยู่รอดได้ เพราะมันดีจริง
 
-		ผมตั่งใจแล้วว่าชีวิตนี้จะใช้ชีวิตอย่างปรตูปชีวี คือ มีการเป็นอยู่ที่เนื่องอยู่ด้วยการให้ของผู้อื่น
 
-		ผมไม่รู้ว่าการเดิมพันครั่งนี้จะเป็นอย่างไร เรายังมีความหวังในมนุษยธรรมได้อยู่ไหม ความดีมันกินไม่ได้จริงหรือเปล่า หรือว่าในที่สุดแล้วความดีไม่มีค่าอะไรในสังคมเท่าสิ่งที่จับต้องได้
+	คุณไม่ได้อยู่คนเดียวในโลกนี้
 
-		นี้คือการเดินทางเพื่อหาคําตอบโดยการเอาชีวิตเป็นตัวทดลอง
+	ยังมีเพื่อนร่วมโลกที่หวังดีและยินดี -->
 
-		เป็นการก้าวเข้าไปสู่ความมืด ที่มีแต่การเดินต่อไปในความมืดนั้นเท่านั้นที่จะพาเราไปถึงจุดหมาย
 
-	</p>
-	<p class="lead" style="position:absolute; background: white;">
-		สวัสดีครับผมชื่อนายศุภกร เลาหสงคราม ตอนนี้ ไม่มีรายได้ ไม่มีงานประจํา ไม่มีหน้าตาอะไรในสังคม มีอย่างเดียวคือ จิตใจที่ต้องการจะทําดีต่อผู้อื่นโดยเชื่อว่าถ้าทําดีแล้วจะต้องอยู่รอดได้ ผมไม่ได้เอาความฉลาดในการหาเงินเป็นเดิมพันเพื่อการอยู่รอด ไม่ได้เอาความเก่งกาจ อํานาจ หรือวุตจากเมืองนอกอะไรมาเป็นเดิมพัน แต่จะเอาการทําดีที่ผมเคยทํา กําลังทํา และ จะทําเป็นเดิมพันโดยที่ผมเชื่อว่า
 
-		ถ้าทําดีจริง ยังไงสังคมก็ต้องช่วยและสนันสนุนความดีนั่น
-
-		ผมเชื่อในความดี และอยากให้คนอื่นเช่นกันเชื่อมั่นในความดีของตนและทําในสิ่งนั้นแบบไม่กลัวตาย
-
-		ถ้าคนทําดีจริง จะต้องอยู่รอดได้ เพราะมันดีจริง
-
-		ผมตั่งใจแล้วว่าชีวิตนี้จะใช้ชีวิตอย่างปรตูปชีวี คือ มีการเป็นอยู่ที่เนื่องอยู่ด้วยการให้ของผู้อื่น
-
-		ผมไม่รู้ว่าการเดิมพันครั่งนี้จะเป็นอย่างไร เรายังมีความหวังในมนุษยธรรมได้อยู่ไหม ความดีมันกินไม่ได้จริงหรือเปล่า หรือว่าในที่สุดแล้วความดีไม่มีค่าอะไรในสังคมเท่าสิ่งที่จับต้องได้
-
-		นี้คือการเดินทางเพื่อหาคําตอบโดยการเอาชีวิตเป็นตัวทดลอง
-
-		เป็นการก้าวเข้าไปสู่ความมืด ที่มีแต่การเดินต่อไปในความมืดนั้นเท่านั้นที่จะพาเราไปถึงจุดหมาย
-
-	</p>
-
-<!-- </div> -->
 </div>
