--- a/client/app/report/report.html
+++ b/client/app/report/report.html
@@ -1,3 +1,4 @@
+<view-title>รายงานปัญหา -</view-title>
 <div class="container">
 
 	<div class="page-header">
@@ -7,12 +8,12 @@
 	<div class="panel panel-info">
 	  <div class="panel-heading"><i class="fa fa-wrench fa-lg"></i> แจ้งปัญหา</div>
 	  <div class="panel-body">
-	    <p></p>
+	    <p>ขอบคุณมากสําหรับทุกท่านนี้สละเวลามาแจ้งความขัดข้องในระบบนะคราบบ</p>
 	  </div>
 
 	  <form class="row" style="margin-right:0; margin-left:0;">
 	  	<div class="col-md-1 col-sm-2 col-xs-12">
-		  	<img class="img-rounded userIcon" style="display: block; margin:10px auto; width:60px; height:60px" ng-src="{{currentUser.coverimg || 'https://kalie101.files.wordpress.com/2013/01/wpid-bn_avatar_builtin14.png'}}">
+		  	<img class="img-rounded userIcon" style="display: block; margin:10px auto; width:60px; height:60px" ng-src="{{currentUser.coverimg || '/assets/images/usericon.png'}}">
 	  	</div>
 	  	<div class="col-md-11 col-sm-10 col-xs-12">
 		  	<div class="input-group input-group-lg">
