--- a/client/app/service/service.html
+++ b/client/app/service/service.html
@@ -1,8 +1,13 @@
 <div class="container">
 	<div class="page-header">
-	  <h1>บริการเพื่อนใจ <small>ทําฟรี ทําจริง ทําด้วยใจ ไม่หวังผลตอบแทน เป็นทานแก่สังคม
-</small></h1>
+	  <h1 style="font-size: 4em;">กิจกรรมเพื่อนใจ</h1>
 	</div>
+
+	<h1>เพื่อนใจ hotLINE</h1>
+	<!-- <h1>บ้านพักใจ</h1> -->
+	<h1>นัดเพื่อนใจเล่นเบอดร์เกมม์</h1>
+	<!-- <h1>Friend Delivery บริการจัดส่งเพื่อน</h1> -->
+
 	<div class="row">
 	<div class="no-gutter col-sm-6 col-md-6">
 	  <div class="mythumbnail animated fadeIn" article="/assets/images/service1.png" id="{{article._id}}" ng-click="goToArticle(article._id)">
