--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,6 @@
       <link rel="stylesheet" href="bower_components/ng-tags-input/ng-tags-input.bootstrap.min.css" />
       <link rel="stylesheet" href="bower_components/jqcloud2/dist/jqcloud.css" />
       <link rel="stylesheet" href="bower_components/animate-css/animate.css" />
-      <link rel="stylesheet" href="bower_components/angular-carousel/dist/angular-carousel.css" />
       <link rel="stylesheet" href="bower_components/animate.css/animate.css" />
       <!-- endbower -->
     <!-- endbuild -->
@@ -101,12 +100,11 @@
       <script src="bower_components/angulartics/src/angulartics-marketo.js"></script>
       <script src="bower_components/angulartics/src/angulartics-intercom.js"></script>
       <script src="bower_components/angular-facebook/lib/angular-facebook.js"></script>
-      <script src="bower_components/angular-parallax/scripts/angular-parallax.js"></script>
       <script src="bower_components/angularjs-viewhead/angularjs-viewhead.js"></script>
-      <script src="bower_components/angular-touch/angular-touch.js"></script>
-      <script src="bower_components/angular-carousel/dist/angular-carousel.js"></script>
       <script src="bower_components/angular-animate/angular-animate.js"></script>
       <script src="bower_components/scroll-animate-directive/src/scroll-animate-directive.js"></script>
+      <script src="bower_components/angular-scroll/angular-scroll.js"></script>
+      <script src="bower_components/ng-parallax/angular-parallax.min.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
